# whisqa

./: MIT License.md  README.md  get_score.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
models/: transformer_config.py  transformer_wrapper.py  whisper_ni_predictors.py  whisper_wrapper.py
scripts/: README.md  strip_whisper_weights.py
tests/: conftest.py  test_audio_utils.py  test_cli.py  test_predict.py
tests/audio/: ATTRIBUTION.md
whisqa/: __init__.py  _checkpoints.py  cli.py
whisqa/_models/: config.py  predictors.py  transformer.py  whisper_wrapper.py
